test/tests/bad/transmute-size-mismatch2.carth
;; NoClassInstance

(defun foo [a] :of (forall (a b) (Fun [a] b))
  (transmute a))
